// cd client
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative pb/hello.proto
syntax = "proto3"; // 版本声明，使用Protocol Buffers v3版本

// option go_package = "xx";  // 指定生成的Go代码在你项目中的导入路径
option go_package = "client/pb";

package pb; // 包名


// 定义服务
service Greeter {
    // SayHello 方法
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
    // 服务端返回流式数据
    rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);
    // 请求更新的ImportantNews
    rpc UpdatedNewsReplies(UpdatedNewsRequest) returns (stream UpdatedNewsResponse);  // 为什么非要加参数？我不需要参数
}


// 请求消息
message HelloRequest {
    string name = 1;
}

// 响应消息
message HelloResponse {
    string reply = 1;
}


message UpdatedNewsRequest {
    string nothing = 1;
}

// 嵌套消息
message Stock {
    string market = 1;
    string code = 2;
}

message UpdatedNewsResponse {
    string title = 1;
    string media = 2;
    repeated Stock stocks = 3;
}


